--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "mongodb": "^6.17.0",
+    "mongoose": "^8.16.4",
     "next": "14.2.30",
     "react": "^18",
     "react-dom": "^18",
